[package]
name = "openlink-pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
futures-util = "0.3"
log = { version = "0.4", features = ["std"] }
quinn = "0.8"
rcgen = "0.8"
ring = "0.16"
rustls = { version = "0.20", features = ["quic"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
tracing = "0.1"
#unqlite = "1.5"
