[package]
name = "openlink-pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
boringauth = "0.9"
futures-util = "0.3"
jsonwebtoken = "8.0"
log = { version = "0.4", features = ["std"] }
quinn = "0.9.3"
rand = "0.8"
rcgen = "0.10"
ring = "0.16"
rusqlite = { version = "0.28", features = ["bundled"] }
rustls = { version = "0.20", features = ["quic"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
